tests/errors/no_comma_between_args.ne
function add(a: int32, b: int32): int32
{
    return a + b;
}

function main(): int32
{
    return add(1 2);
}
